--- a/HTML Table in Text Area.HTML
+++ b/HTML Table in Text Area.HTML
@@ -2,50 +2,50 @@
 <table style="border-collapse: collapse; width: 100%;">
   <tr>
     <th>AccountsWithPlaceHolders</th>
-    <th>CA_FirstMthValue</th>
-    <th>CA_SecondMthValue</th>
-    <th>CA_ThirdMthValue</th>
+    <th>CA First Month</th>
+    <th>CA Second Month</th>
+    <th>CA Third Month</th>
   </tr>
   <tr>
     <td>S0099-Critical Stat</td>
-    <td>${DocumentProperty:CA_FirstMth_S0099}</td>
-    <td>${DocumentProperty:CA_SecondMth_S0099}</td>
-    <td>${DocumentProperty:CA_ThirdMth_S0099}</td>
+    <td>${DocumentProperty:caFirstMthS0099}</td>
+    <td>${DocumentProperty:caSecondMthS0099}</td>
+    <td>${DocumentProperty:caThirdMthS0099}</td>
   </tr>
   <tr>
     <td>S0152-Total Procedures</td>
-    <td>${DocumentProperty:CA_FirstMth_S0152}</td>
-    <td>${DocumentProperty:CA_SecondMth_S0152}</td>
-    <td>${DocumentProperty:CA_ThirdMth_S0152}</td>
+    <td>${DocumentProperty:caFirstMthS0152}</td>
+    <td>${DocumentProperty:caSecondMthS0152}</td>
+    <td>${DocumentProperty:caThirdMthS0152}</td>
   </tr>
   <tr>
     <td>Total Visits</td>
-    <td>${DocumentProperty:CA_FirstMth_Visits}</td>
-    <td>${DocumentProperty:CA_SecondMth_Visits}</td>
-    <td>${DocumentProperty:CA_ThirdMth_Visits}</td>
+    <td>${DocumentProperty:caFirstMthVisits}</td>
+    <td>${DocumentProperty:caSecondMthVisits}</td>
+    <td>${DocumentProperty:caThirdMthVisits}</td>
   </tr>
   <tr>
     <td>Net Revenue</td>
-    <td>${DocumentProperty:CA_FirstMth_Revenue}</td>
-    <td>${DocumentProperty:CA_SecondMth_Revenue}</td>
-    <td>${DocumentProperty:CA_ThirdMth_Revenue}</td>
+    <td>${DocumentProperty:caFirstMthRevenue}</td>
+    <td>${DocumentProperty:caSecondMthRevenue}</td>
+    <td>${DocumentProperty:caThirdMthRevenue}</td>
   </tr>
   <tr>
     <td>Salaries, Wages & Benefits</td>
-    <td>${DocumentProperty:CA_FirstMth_SWB}</td>
-    <td>${DocumentProperty:CA_SecondMth_SWB}</td>
-    <td>${DocumentProperty:CA_ThirdMth_SWB}</td>
+    <td>${DocumentProperty:caFirstMthSwb}</td>
+    <td>${DocumentProperty:caSecondMthSwb}</td>
+    <td>${DocumentProperty:caThirdMthSwb}</td>
   </tr>
   <tr>
     <td>Gain/(Loss) from Operations</td>
-    <td>${DocumentProperty:CA_FirstMth_GainLoss}</td>
-    <td>${DocumentProperty:CA_SecondMth_GainLoss}</td>
-    <td>${DocumentProperty:CA_ThirdMth_GainLoss}</td>
+    <td>${DocumentProperty:caFirstMthGainLoss}</td>
+    <td>${DocumentProperty:caSecondMthGainLoss}</td>
+    <td>${DocumentProperty:caThirdMthGainLoss}</td>
   </tr>
   <tr>
     <td>Total EBITDA Expenses</td>
-    <td>${DocumentProperty:CA_FirstMth_EBITDA}</td>
-    <td>${DocumentProperty:CA_SecondMth_EBITDA}</td>
-    <td>${DocumentProperty:CA_ThirdMth_EBITDA}</td>
+    <td>${DocumentProperty:caFirstMthEbitda}</td>
+    <td>${DocumentProperty:caSecondMthEbitda}</td>
+    <td>${DocumentProperty:caThirdMthEbitda}</td>
   </tr>
 </table>
